Add site header

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   :root{
     ---body-bg:#f2f2f2;
     ---text-color:#111517;
+    ---header-bg:#ffff;
+
   }
 
 /* FONTS  */
@@ -78,9 +80,10 @@
  /* DARK-MODE  */
 
  .dark-mode {
- ---body-bg:#222;
+ ---body-bg:#202C36;
  ---text-color:#f2f2f2;
-
+ ---header-bg:var(---body-bg);
+ ---logo-bg:#fff;
  }
 
 .main-content{
@@ -92,6 +95,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
+
   font-family: "Nunito Sans","Arial",sans-serif;
   font-size: 14px;
   font-weight: light;
@@ -108,3 +112,80 @@ padding-left: 20px;
 margin-right: auto;
 margin-left: auto;
  }
+
+a{
+    text-decoration: none;
+}
+
+ /* SITE HEADER STYLES  */
+
+ .site-header {
+    padding-top: 23px;
+    padding-bottom: 23px;
+    background-color: var(---header-bg);
+    box-shadow: 0px 2px 4px  rgba(0, 0, 0, 0.07);
+
+}
+
+.site-header-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+}
+
+
+.header-wrapper{
+    background-color:var(---logo-bg);
+}
+
+.site-logo-link {
+  display: inline-block;
+font-weight: 800;
+font-size: 24px;
+
+line-height: normal;
+
+}
+.site-logo-img{
+    display: block;
+width: 234px;
+height: 33px;
+flex-shrink: 0;
+
+}
+
+
+.site-logo-img:hover{
+    opacity: 0.5;
+}
+
+.site-logo-img:active{
+    opacity: 0.7;
+}
+
+.wrapper-toggler {
+
+}
+.toggler-button {
+    padding: 0;
+    border: 0;
+    background-color:transparent;
+    cursor: pointer;
+}
+.toggler-button-inner {
+    display: flex;
+    align-items:center;
+    color: var(---text-color);
+}
+.toggler-icon-img {
+   margin-right: 8px;
+   flex-shrink: 0;
+   border:1px solid transparent;
+}
+.toggler-icon-heading {
+font-weight: 600;
+font-size: 16px;
+line-height: 21px;
+color: var(---text-color);
+}
