--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     ---body-bg:#f2f2f2;
     ---text-color:#111517;
     ---header-bg:#ffff;
-    ---light-body:---body-bg;
+    ---light-body:#fff;
   }
 
 /* FONTS  */
@@ -77,15 +77,7 @@
   outline: 2ps dashed blueviolet;
  }
 
- /* DARK-MODE  */
 
- .dark-mode {
- ---body-bg:#202C36;
- ---text-color:#f2f2f2;
- ---header-bg:var(---body-bg);
- ---logo-bg:#fff;
- ---light-body:#2B3844;
- }
 
 .main-content{
   flex-grow: 1;
@@ -105,6 +97,17 @@
   line-height: 16px;
   transition: background-color 0.4s ease, color 0.4s ease,---logo-bg 0.4s ease;
  }
+
+
+  /* DARK-MODE  */
+
+  .dark-mode {
+    ---body-bg:#202C36;
+    ---text-color:#f2f2f2;
+    ---header-bg:var(---body-bg);
+    ---logo-bg:#fff;
+    ---light-body:#2B3844;
+    }
 
  *:focus{
     outline: 3px dashed lightgreen;
@@ -210,17 +213,22 @@ margin-bottom: 48px;
     display: flex;
     align-items:center;
     justify-content: space-between;
+
 }
 .filter-search-input {
     max-width: 480px;
 padding: 18px 74px;
 border-radius: 5px;
  box-shadow: 0 2 9 0 #000000 5.32%;
-border:0;
+border:0 ;
 background-color:var(---light-body);
 color:var(---text-color);
-
 }
+
+
+
+
+
 .filter-region-select {
     padding: 18px 25px;
    border-radius:5px;
